# OpenSesame

./: .editorconfig  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DISCLAIMER.md  README.md  opencode.json  opensesame.example.toml  pyproject.toml  renovate.json
.agents/skills/change-planning/: SKILL.md
.agents/skills/repo-orientation/: SKILL.md
.agents/skills/solve-captcha-wall/: SKILL.md
.agents/skills/verification-plan/: SKILL.md
.claude/skills/solve-captcha-wall/: SKILL.md
.codex/: config.toml
.github/ISSUE_TEMPLATE/: 1_bug_report.yaml
.github/workflows/: ci.yml  docs.yaml
docs/: image-classification-examples.md  ocr-test-sites.md  recaptcha-generalization.md  recaptcha-vision-models.md  rocm-radeon-igpu-spike.md  throughput-targets.md
examples/: _recording.py  benchmark_ocr_model.py  cas217_managed_challenge.py  classify_image.py  classify_image_grid.py  dictate_recaptcha_audio.py  eval_ocr_corpus.py  eval_recaptcha_tiles.py  fortress_gauntlet.py  google_recaptcha_v2_actor.py  google_search_recaptcha_probe.py  live_2captcha_normal.py  live_2captcha_ocr_fetch.py  local_ocr_model.py  mtcaptcha_resume.py  render_recaptcha_click_overlay.py  replay_recaptcha_failures.py  solve_altcha_live.py  solve_audio_live.py  solve_cap_live.py  solve_geetest.py  solve_geetest_live.py  solve_geetest_v4_live.py  solve_hcaptcha_live.py  solve_mtcaptcha.py  solve_mtcaptcha_live.py  solve_ocr_live.py  solve_on_tap_live.py  solve_puzzle_live.py  solve_recaptcha_audio_dom.py  solve_recaptcha_cross_origin_live.py  solve_recaptcha_dom.py  solve_recaptcha_v3_enterprise_live.py  solve_recaptcha_v3_live.py  solve_rotatecaptcha.py  solve_rotatecaptcha_live.py  solve_turnstile_challenge_live.py  solve_turnstile_live.py  solve_turnstile_widget_live.py  solve_vision_live.py  (+3 more)
examples/api_design/: opensesame_v1.py
opensesame/: __init__.py  cli.py  demo.py  events.py  notify.py  server.py  storage.py  voidcrawl.py
opensesame/frontend/: __init__.py  app.py
opensesame/frontend/static/: global.css
opensesame/frontend/templates/: events.html  history.html  index.html  nav.html  notifications-script.html  novnc.html  queue.html  theme-init.html  theme-script.html
scripts/: generate_api_docs.py
src/OpenSesame/: __init__.py  cli.py
src/OpenSesame/api/: __init__.py  audit.py  builtin.py  challenge.py  defaults.py  manual.py  policy.py  providers.py  registry.py  result.py  solver.py
src/OpenSesame/api/engines/: __init__.py  _hcaptcha_dom.py  _pow.py  _recaptcha_dom.py  altcha.py  base.py  cap.py  direct_answer.py  geetest.py  hcaptcha.py  mtcaptcha.py  puzzle.py  recaptcha.py  recaptcha_audio.py  recaptcha_grid.py  recaptcha_v3.py  rotate.py  turnstile.py
src/OpenSesame/mcp/: __init__.py  server.py
src/open_sesame/: __init__.py  cli.py  contracts.py
src/open_sesame/api/: __init__.py  audit.py  challenge.py  defaults.py  manual.py  policy.py  providers.py  solver.py
src/open_sesame/api/engines/: base.py  direct_answer.py  recaptcha.py  recaptcha_audio.py  recaptcha_grid.py
src/open_sesame/harness/: __init__.py  antibot.py  benchmarks.py  eval.py  gauntlet.py  geetest_slider.py  google_search.py  mtcaptcha.py  page_sync.py  process.py  recaptcha_dom.py  recaptcha_v2.py  recording.py  rotate_captcha.py  targets.py  twocaptcha.py
src/open_sesame/solvers/: __init__.py  audio.py  image_classification.py  local_ml.py  ml_config.py  ocr.py
tests/: test_antibot.py  test_audio_solver.py  test_benchmarks.py  test_captcha_engines.py  test_cli_manual.py  test_engines.py  test_eval.py  test_gauntlet.py  test_geetest_slider.py  test_generate_api_docs_links.py  test_google_search.py  test_hcaptcha_engine.py  test_image_classification.py  test_live_2captcha_normal.py  test_mcp_server.py  test_ml_config.py  test_mtcaptcha.py  test_ocr_solver.py  test_page_sync.py  test_policy.py  test_pow_engines.py  test_puzzle_engine.py  test_recaptcha_v2.py  test_recaptcha_v3.py  test_result_registry.py  test_rotate_captcha.py  test_solver.py  test_targets.py  test_twocaptcha.py
tests/blackbox/: test_api_contracts.py
tests/integration/: test_frontend.py
tests/unit/: test_cli.py  test_storage.py  test_voidcrawl.py
