[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "open-sesame"
version = "0.1.0"
description = "Self-hostable captcha/token-solving microservice"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Cascading Labs" }]
dependencies = [
  "httpx>=0.27",
  "pydantic>=2",
  "rich-click>=1.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
# Solver-on-tap MCP server (`opensesame-mcp` / `python -m OpenSesame.mcp.server`).
# Uses the FastMCP bundled in the `mcp` package; the live solve also needs the
# `live` extra (voidcrawl) and the relevant `ml-*` extra.
mcp = [
  "mcp>=1.2",
]
# Live browser driving (challenge engines). OpenSesame consumes a VoidCrawl page;
# it never launches a browser itself. 0.3.5 adds frame-scoped JS eval
# (`eval_js_in_frame`) for cross-origin reCAPTCHA; 0.3.6 adds the frame-rooted
# AX locator (`ax_box_in_frame`) the Turnstile engine uses to reach the
# checkbox in a closed shadow root inside the cross-origin Cloudflare frame.
live = [
  "voidcrawl>=0.3.6",
]
# Local audio transcription (reCAPTCHA audio side-door).
ml-audio = [
  "torch>=2.0",
  "transformers>=4.57",
]
# Local vision/OCR inference (grid tile classification, OCR captchas, and the
# hCaptcha VLM grounding reasoner). torchvision is needed by some captcha-OCR
# models' custom processors (e.g. Graf-J) and the Qwen2.5-VL fast image processor;
# accelerate powers device_map for the VLM. (On ROCm/system-torch setups install
# torch + torchvision from the system/ROCm index, not PyPI, to avoid a CUDA pull.)
ml-vision = [
  "pillow>=12",
  "torch>=2.0",
  "torchvision>=0.15",
  "transformers>=4.57",
  "accelerate>=0.26",
]
# Local reasoning LM for the custom logic-puzzle engine. Default is Gemma 3n E2B
# as a Q4 GGUF via llama.cpp (~3 GB, CPU); set policy.models["puzzle"] to the
# bf16 HF repo for a big-RAM host / GPU (then the `ml-vision` transformers path
# is used instead of llama-cpp-python).
ml-reasoner = [
  "llama-cpp-python>=0.3",
  "huggingface-hub>=0.20",
]

[project.scripts]
opensesame = "OpenSesame.cli:main"
opensesame-mcp = "OpenSesame.mcp.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

# src layout: the project type-checks with Mypy. (Editor/IDE type checkers are a
# local concern — configure their src path in your editor, not here.)
[tool.mypy]
mypy_path = "src"
packages = ["OpenSesame"]

[tool.hatch.build.targets.wheel]
packages = ["src/OpenSesame"]
