[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "opensesame"
version = "0.1.0"
description = "Human takeover control center for challenge fallback workflows"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
  "aiosqlite>=0.21",
  "click>=8.3",
  "fastapi>=0.138.1",
  "granian>=2",
  "jinja2>=3.1",
  "pydantic>=2",
  "python-multipart>=0.0.32",
  "rich>=14",
  "rich-click>=1.9.7",
  "voidcrawl @ file:///home/andrew/Desktop/cl/VoidCrawl",
]

[project.scripts]
opensesame = "opensesame.cli:main"
open-sesame = "opensesame.cli:main"

[dependency-groups]
dev = [
  "djlint>=1.36",
  "httpx2>=0.28.1",
  "httpx2>=0.28",
  "mypy>=1.15",
  "pytest-cov>=7",
  "pytest>=8",
  "pytest-asyncio>=1",
  "ruff>=0.9",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["opensesame"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
  "SIM",
  "FAST",
]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["opensesame"]

[[tool.mypy.overrides]]
module = "voidcrawl"
ignore_missing_imports = true

[tool.djlint]
profile = "jinja"
extension = "html"
ignore = "H006,H021"
include = "opensesame/frontend/templates"

[tool.coverage.run]
branch = true
source = ["opensesame"]
omit = [
  "opensesame/cli.py",
  "opensesame/demo.py",
]

[tool.coverage.report]
fail_under = 70
show_missing = true
skip_covered = true
